--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   google_maps_flutter: ^2.0.6
   geolocator: ^7.4.0
   geocoding: ^2.0.0
+  provider: ^5.0.0
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
